[gd_scene load_steps=4 format=3 uid="uid://bqsrqvgdycygu"]

[ext_resource type="Script" uid="uid://bt40jgofh0axr" path="res://Scenes/battle_scene.gd" id="1_b25br"]
[ext_resource type="PackedScene" uid="uid://cbvjlj84j6h51" path="res://Scenes/enemy.tscn" id="3_anwxn"]
[ext_resource type="FontFile" uid="uid://nt8o1lj63fvq" path="res://Assets/Fonts/PublicPixel-rv0pA.ttf" id="4_e5vbs"]

[node name="BattleScene" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_b25br")

[node name="BG" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PlayerParty" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 970.0
offset_top = 17.0
offset_right = 1148.0
offset_bottom = 152.0
grow_vertical = 2
theme_override_constants/separation = 25

[node name="EnemyParty" type="VBoxContainer" parent="."]
layout_mode = 0

[node name="Enemy" parent="EnemyParty" instance=ExtResource("3_anwxn")]
position = Vector2(63, 326)

[node name="ActionMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 640.0
offset_top = 227.0
offset_right = 969.0
offset_bottom = 414.0

[node name="VBoxContainer" type="VBoxContainer" parent="ActionMenu"]
layout_mode = 0
offset_left = 4.0
offset_top = -49.0
offset_right = 140.0
offset_bottom = 31.0

[node name="ActionOne" type="Button" parent="ActionMenu/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_e5vbs")
text = "Action 1"

[node name="ActionOne2" type="Button" parent="ActionMenu/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_e5vbs")
text = "Action 2"

[node name="ActionOne3" type="Button" parent="ActionMenu/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_e5vbs")
text = "Action 3"

[node name="Timer" type="Timer" parent="."]

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
